Change the style

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="preogramador web y movil" />
-    <meta name="description" content="programador junior backend con conocimientos en desarrollo web y móvil " />
+    <meta name="keywords" content="programador web y desarrollador indie/>
+    <meta name=" description" content="programador junior backend con conocimientos en desarrollo web y móvil " />
     <meta name="author" content="Hector Valdes M" />
     <meta name="robots" content="index, nofollow" />
     <meta http-equiv="content-type" content="text/html;UTF-8" />
@@ -18,12 +18,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
     <link rel="icon" type="image/png" href="img/logo cuadrado.png" />
-    <title>Portafolio</title>
+    <title>Portafolio Analista Programador</title>
 </head>
 
 <body>
     <div class="loading">
-        <h1 class="txt-loading">Cargando...</h1>
+        <h2 class="txt-loading">Cargando...</h2>
     </div>
 
     <canvas id="canvas"></canvas>
@@ -35,10 +35,10 @@
             </li>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
-                    <a class="nav-link" href="#sec-01">Sobre mí</a>
+                    <img class="logo-white" src="/img/logoWhite.png" alt="logo-white">
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#sec-02">Conocimientos</a>
+                    <a class="nav-link" href="#sec-01">Sobre mí</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#sec-03">Proyectos</a>
@@ -68,8 +68,8 @@
                             class="fab fa-github"></i></a>
                 </div>
                 <div class="titulo-hero">
-                    <h1 class="typewriter"></h1>
-                    <h3>Analista Programador</h3>
+                    <h2 class="typewriter"></h2>
+                    <h1>Analista Programador</h1>
                 </div>
 
                 <div class="button-hero">
@@ -78,29 +78,56 @@
                 </div>
             </div>
             <div class="image-hero" data-tilt>
-                <div class="image-profile-tilt" >
-                    <img class="image-profile"  src="img/avatar.png" alt="profile foto" />
+                <div class="image-profile-tilt">
+                    <img class="image-profile" src="img/avatar.png" alt="profile foto" />
                 </div>
             </div>
         </div>
     </section>
-
     <!-- About me -->
+    <hr id="hr_separation" />
     <div class="caja-sobre-mi" id="sec-01">
         <div class="sobremi-div">
             <div class="descip-div" data-aos="fade-right" data-aos-duration="1000">
-                <h1 class="h1-sobremi">Sobre mí</h1>
+                <h2 class="h1-sobremi">Sobre mí</h2>
                 <p class="descrip-me">
                     Hola! Me llamo <strong>Héctor</strong> y soy
-                    Analista programador egresado de Inacap. Soy una persona estudiosa, dedicada
+                    Analista programador egresado de Inacap el año 2021. Soy una persona organizada, dedicada
                     y responsable, con muchas metas cumplidas y muchas más por cumplir.
                     <br />
-                    Me considero una buena persona, amigable, comprensiva, educada, y
-                    creo que para todo hay tiempo. Mi Hobbie son los videojuegos sobre
-                    todos los independientes, también me encanta estudiar y tocar
-                    guitarra eléctrica, siempre estoy buscando alguna nueva tecnología o
-                    reforzando lo aprendido.
+                    Me considero una persona amigable, comprensiva, creativa, y
+                    creo que para todo hay tiempo. Mi Hobbie son los videojuegos independientes, también me encanta
+                    estudiar y tocar
+                    guitarra eléctrica.
                 </p>
+                <h2>Conocimientos</h2>
+                <p>
+                    Constantemente estoy estudiando de manera autodidacta en la plataforma
+                    <strong>Udemy</strong>. Actualmente me encuentro realizando un curso
+                    de <strong>React</strong> y he realizado cursos de diseño de
+                    videojuegos con el programa <strong>Game Maker Studio 2</strong>, con
+                    el cual desarrollé 3 videojuegos sencillos, también he tomado curso de
+                    desarrollo <strong>Frontend</strong> puliendo mis conocimientos en
+                    <strong>HTML, CSS y JavaScript</strong>.
+                    <br>
+                    Hasta ahora las tecnologías que manejo son las siguientes:
+                </p>
+                <div class="flex-knowledge">
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/html-5--v1.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/css3.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/javascript--v1.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/wordpress.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/bootstrap.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/sass.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/c-sharp-logo.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/java-coffee-cup-logo--v1.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/mysql-logo.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/android-os.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/git.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/game-maker.png"/></div>
+                    <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/unity.png"/></div>
+                    
+                </div>
             </div>
             <div class="image-div" data-aos="fade-left" data-aos-duration="1000">
                 <img class="image-me" src="img/myPhoto.jpeg" alt="foto de mi mismisimo" />
@@ -113,78 +140,18 @@
         </div>
     </div>
     <hr id="hr_separation" />
-    <!-- Conocimientos -->
-    <div id="sec-02">
-        <div class="container-knowledge" data-aos="fade-up" data-aos-duration="1000">
-            <h1 class="h1-conocimientos">Conocimientos</h1>
-            <p class="description-knowledge">
-                Constantemente estoy estudiando de manera autodidacta en la plataforma
-                <strong>Udemy</strong>. Actualmente me encuentro realizando un curso
-                de <strong>React</strong> y he realizado cursos de diseño de
-                videojuegos con el programa <strong>Game Maker Studio 2</strong>, con
-                el cual desarrollé 3 videojuegos sencillos, también he tomado curso de
-                desarrollo <strong>Frontend</strong> puliendo mis conocimientos en
-                <strong>HTML, CSS y JavaScript</strong>.
-                <br>
-                Hasta ahora las tecnologías que manejo son las siguientes:
-            </p>
-        </div>
-        <!-- Cuadro de conocimientos -->
-        <div class="knowledge-father" data-aos="zoom-in" data-aos-duration="1000">
-            <div class="web">
-                <p class="text-center"><strong>Diseño Web</strong></p>
-                <hr>
-                <p class="knowledge-item"><i class="fab fa-html5"></i>HTML</p>
-                <p class="knowledge-item"><i class="fab fa-css3-alt"></i>CSS</p>
-                <p class="knowledge-item"><i class="fab fa-sass"></i>SASS</p>
-                <p class="knowledge-item">
-                    <i class="fab fa-wordpress-simple"></i>Wordpress
-                </p>
-            </div>
-            <div class="progra" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center"><strong>Lenguajes de Programación</strong></p>
-                <hr>
-                <p class="knowledge-item"><i class="fab fa-java"></i>Java</p>
-                <p class="knowledge-item"><i class="fas fa-code"></i>C#</p>
-                <p class="knowledge-item"><i class="fab fa-js"></i>JavaScript</p>
-            </div>
-            <div class="tec" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center"><strong>Herramientas</strong></p>
-                <hr>
-                <p class="knowledge-item">
-                    <i class="fas fa-database"></i>Base de Datos SQL
-                </p>
-                <p class="knowledge-item">
-                    <i class="fab fa-git"></i>Control de versiones
-                </p>
-                <p class="knowledge-item">
-                    <i class="fab fa-android"></i>Android Studio
-                </p>
-            </div>
-            <div class="games" data-aos="zoom-in" data-aos-duration="1000">
-                <p class="text-center"><strong>Programación de videojuegos</strong></p>
-                <hr>
-                <p class="knowledge-item">
-                    <i class="fas fa-gamepad"></i>Game Maker Studio 2
-                </p>
-                <p class="knowledge-item"><i class="fab fa-unity"></i>Unity2d</p>
-            </div>
-        </div>
-    </div>
-    <hr id="hr_separation" />
     <!-- Proyectos -->
     <div id="sec-03">
         <div class="trabajos-up">
             <div class="trabajos-radius-up"></div>
         </div>
         <div class="container-trabajos">
-            <h1 class="h1-trabajos">Proyectos</h1>
+            <h2>Proyectos</h2>
             <p>
                 Tengo pocos proyectos creados, hasta ahora algunas pruebas para
                 practicar con <strong>JavaScript</strong>, juegos para pc
                 y algunas modificaciones/creaciones en páginas de
-                Wordpress para la empresa DesignSeo
-                pero pronto iré subiendo más cosas. <br /><br />
+                Wordpress para la empresa <a href="http://designseogroup.com/" target="_blank" rel="noopener noreferrer"><b>DesignSeo.</b></a> <br /><br />
             </p>
             <span><i id="spin1" class="fas fa-cog"></i><i id="spin2" class="fas fa-cog"></i></span>
             <div class="images-portfolio">
@@ -195,7 +162,7 @@
                     <p>Inmobiliaria Sudamericana</p><img src="/img/Proyectos/isuda.png" alt="isudamericana website">
                 </div>
                 <div>
-                    <p>estación Lastarria</p><img src="/img/Proyectos/lastarria.png" alt="estacion lastarria website">
+                    <p>Estación Lastarria</p><img src="/img/Proyectos/lastarria.png" alt="estacion lastarria website">
                 </div>
                 <div>
                     <p>Portafolio Ilustradora Linna-dem</p><img src="/img/Proyectos/linna.png"
@@ -204,7 +171,7 @@
                 <div>
                     <p>MiamiUnClic</p><img src="/img/Proyectos/miami.png" alt="miamiunclic website">
                 </div>
-                <div>Quntur<img src="/img/Proyectos/quntur.png" alt="quntur website"></div>
+
                 <div>
                     <p>Refuerza más</p><img src="/img/Proyectos/refuerza.png" alt="refuerzamas website">
                 </div>
@@ -228,16 +195,16 @@
     <div id="sec-04">
         <div class="container-servicio">
             <div class="content-service" data-aos="fade-right" data-aos-duration="2000">
-                <h1 class="h1-conocimientos">Servicio Web</h1>
+                <h2 class="h1-conocimientos">Servicio Web</h2>
                 <p class="description-service">
                     ¿Necesitas una página WEB? puedo ayudarte en eso, cuento con un equipo profesional con el cual
                     podemos desarrollar tu página
                     con un diseño único, diferente y adaptado a tu presupuesto. <br>
                 </p><br>
                 <div class="btn-download text-center">
-                    <p>Visítenos en el siguiente enlace</p><br>
-                    <a href="https://hectorvaldesm.com/servicio-web/" target="_blank" rel="noopener noreferrer"><input
-                            type="button" class="btn btn-web" value="Conocer más" /></a>
+                    <p>Cuéntame sobre tu proyecto y te ayudaremos</p><br>
+                    <a href="#sec-05" rel="noopener noreferrer"><input
+                            type="button" class="btn btn-web" value="Conversemos" /></a>
                 </div>
             </div>
             <div class="content-image-btn" data-aos="fade-left" data-aos-duration="2000">
@@ -250,7 +217,7 @@
     <!-- contacto -->
     <div id="sec-05" data-aos="fade-up" data-aos-duration="1000">
         <div class="tittle-contact">
-            <h1 class="h1-contactame">Contáctame</h1>
+            <h2 class="h1-contactame">Contáctame</h2>
         </div>
         <div class="form-padre">
             <div class="div-1 text-center">
@@ -289,6 +256,9 @@
 
     <!-- FOOTER -->
     <div class="footer-basic">
+        <div class="logo-footer">
+            <img class="logo-white" src="/img/logoWhite.png" alt="logo-white">
+        </div>
         <footer>
             <div class="social-footer">
                 <a href="https://www.instagram.com/mushroom.47/" target="_blank"><i class="fab fa-instagram"></i></a>
