Project directory changes

--- a/gracias.html
+++ b/gracias.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="preogramador web y movil">
-    <meta name="description" content="programador junior backend con conocimientos en desarrollo web y móvil ">
-    <meta name="author" content="Hector Valdes M">
-    <meta name="robots" content="index, nofollow">
-    <meta http-equiv="content-type" content="text/html;UTF-8">
-    <meta http-equiv="content-language" content="es">
-    <link rel="stylesheet" href="scss/styles.css">
-
-    <link rel="icon" type="image/png" href="img/logo cuadrado.png">
-    <title> Portafolio </title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="keywords" content="desarrollador Frontend programador informático" />
+        <meta name="description"
+            content="programador junior egresado de Inacap con conocimientos en Frontend, Backend, desarrollo aplicaciones escritorio - móvil y diseño de videojuegos." />
+        <meta name="author" content="Hector Valdes M" />
+        <meta name="robots" content="index, nofollow" />
+        <meta http-equiv="content-type" content="text/html;UTF-8" />
+        <meta http-equiv="content-language" content="es" />
+        <link rel="stylesheet" href="scss/styles.css" />
+    
+        <!-- AOS cs -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    
+        <link rel="icon" type="image/png" href="img/logo cuadrado.png" />
+        <title>Héctor Valdés - Frontend Developer</title>
+    </head>
 
 <body>
    
 
     <!-- gracias -->
     <div class="caja-gracias">
-            <h1 class="tittle-gracias">Formulario enviado !</h1>
+            <h1 class="tittle-gracias">Formulario enviado !</h1><br>
             <div class="btn-volver">
-                <a href="index.html"  rel="noopener noreferrer"><input
-                        type="button" class="btn btn-warning" value="Volver" /></a>				
+                <a href="index.html"  rel="noopener noreferrer"><input type="button" class="btn btn-warning" value="Volver" /></a>	
             </div>
+            <img src="img/XOsX.gif" alt="gif patito caminando">			
     </div>
 
 
