--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="desarrollador programador informático" />
+        <meta name="keywords" content="desarrollador Frontend programador informático" />
         <meta name="description"
-            content="programador junior egresado de Inacap con conocimientos en Frontend, Backend, desarrollo aplicaciones escritorio - móvil y diseño de videojuegos.." />
+            content="programador junior egresado de Inacap con conocimientos en Frontend, Backend, desarrollo aplicaciones escritorio - móvil y diseño de videojuegos." />
         <meta name="author" content="Hector Valdes M" />
         <meta name="robots" content="index, nofollow" />
         <meta http-equiv="content-type" content="text/html;UTF-8" />
@@ -19,7 +19,7 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     
         <link rel="icon" type="image/png" href="img/logo cuadrado.png" />
-        <title>Portafolio Analista Programador</title>
+        <title>Héctor Valdés - Frontend Developer</title>
     </head>
 
 <body>
@@ -36,16 +36,13 @@
             </li>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
-                    <img class="logo-white" src="/img/logoWhite.png" alt="logo-white">
+                    <a href="https://hectorvaldesm.com"><img class="logo-white" src="/img/logoWhite.png" alt="logo-white"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#sec-01">Sobre mí</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#sec-03">Proyectos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#sec-04">Servicio WEB</a>
                 </li>
                 <li class="nav-item">
                     <a href="#sec-05" class="nav-link">Contacto</a>
@@ -70,7 +67,7 @@
                 </div>
                 <div class="titulo-hero">
                     <h2 class="typewriter"></h2>
-                    <h1>Analista Programador</h1>
+                    <h1>Frontend Developer</h1>
                 </div>
 
                 <div class="button-hero">
@@ -78,14 +75,9 @@
                     <a href="#sec-01"><input class="btn" type="button" value="Sobre mí" /></a>
                 </div>
             </div>
-            <div class="image-hero" data-tilt>
-                <div class="image-profile-tilt">
-                    <img class="image-profile" src="img/avatar.png" alt="profile foto" />
-                </div>
-            </div>
         </div>
     </section>
-    <!-- About me -->
+    <!-- !About me -->
     <hr id="hr_separation" />
     <div class="caja-sobre-mi" id="sec-01">
         <div class="sobremi-div">
@@ -93,12 +85,12 @@
                 <h2 class="h1-sobremi">Sobre mí</h2>
                 <p class="descrip-me">
                     Hola! Me llamo <strong>Héctor</strong> y soy
-                    Analista programador egresado de Inacap el año 2021. Soy una persona organizada, dedicada
+                    Analista programador egresado de Inacap. Soy una persona organizada, dedicada
                     y responsable, con muchas metas cumplidas y muchas más por cumplir.
                     <br />
                     Me considero una persona amigable, comprensiva, creativa, y
                     creo que para todo hay tiempo. Mi Hobbie son los videojuegos independientes, también me encanta
-                    estudiar y tocar
+                    dibujar y tocar
                     guitarra eléctrica.
                 </p>
                 <h2>Conocimientos</h2>
@@ -131,6 +123,7 @@
                     <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/game-maker.png" />
                     </div>
                     <div class="knowledge-item"><img src="https://img.icons8.com/color/96/000000/unity.png" /></div>
+                    <div class="knowledge-item"><img src="/img/SparkAR.png" /></div>
 
                 </div>
             </div>
@@ -145,7 +138,7 @@
         </div>
     </div>
     <hr id="hr_separation" />
-    <!-- Proyectos -->
+    <!-- !Proyectos -->
     <div id="sec-03">
         <div class="trabajos-up">
             <div class="trabajos-radius-up"></div>
@@ -163,7 +156,7 @@
             <br><br>
             <p>
                 Puedes revisar mi Portafolio en el Siguiente <br /><br />
-                <a href="http://portafolio.hectorvaldesm.com/" target="_blank" rel="noopener noreferrer"><input
+                <a href="https://hectorvaldesm.com/trabajos.html" target="_self" ><input
                         type="button" class="btn" value="Link" /></a>
             </p>
         </div>
@@ -172,58 +165,30 @@
         </div>
     </div>
 
-    <!-- Servicio WEB -->
     <hr id="hr_separation-sp" />
-    <div id="sec-04">
-        <div class="container-servicio">
-            <div class="content-service" data-aos="fade-right" data-aos-duration="2000">
-                <h2 class="h1-conocimientos">Servicio Web</h2>
-                <p class="description-service">
-                    ¿Necesitas una página WEB? puedo ayudarte en eso, cuento con un equipo profesional con el cual
-                    podemos desarrollar tu página
-                    con un diseño único, diferente y adaptado a tu presupuesto. <br>
-                </p><br>
-                <div class="btn-download text-center">
-                    <p>Cuéntame sobre tu proyecto y te ayudaremos</p><br>
-                    <a href="#sec-05" rel="noopener noreferrer"><input type="button" class="btn btn-web"
-                            value="Conversemos" /></a>
-                </div>
-            </div>
-            <div class="content-image-btn" data-aos="fade-left" data-aos-duration="2000">
-                <img class="image-web-service" src="img/undraw_startup_life_re_8ow9.svg" alt="Imagen referencial" />
-            </div>
-        </div>
-    </div>
-
-    <hr id="hr_separation-sp" />
-    <!-- contacto -->
+    <!-- !contacto -->
     <div id="sec-05" data-aos="fade-up" data-aos-duration="1000">
-        <div class="tittle-contact">
-            <h2 class="h1-contactame">Contáctame</h2>
-        </div>
+            <h2>Contáctame</h2>
         <div class="form-padre">
-            <div class="div-1 text-center">
-                <p>
-                    Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.
-                </p>
+            <div class="div-info">
+                <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
                 <i class="fas fa-envelope sobre-icono"></i>
             </div>
             <form id="contact-form" method="post" action="/contacto.php">
-                <div class="container-formulario">
-                    <div class="div-2">
+                <div class="div-formulario">
+                    <div class="div-form">
                         <input class="form-input form-name" type="text" name="name" id="name" placeholder="Nombre..."
                             required />
                         <input class="form-input form-email" type="email" name="email" id="email" placeholder="Email..."
                             required />
                         <input class="form-input" type="text" name="subject" id="subject" placeholder="Asunto..."
                             required />
-                        <textarea class="form-input" name="message" id="message" placeholder="Mensaje..." rows="6"
-                            required></textarea>
+                        <textarea class="form-input" name="message" id="message" placeholder="Mensaje..." required></textarea>
                     </div>
-                    <div class="div-3">
+                    <div class="div-button">
                         <!-- <input type="submit" class="btn" value="Enviar" name="enviar" /> -->
                         <button class="g-recaptcha btn" data-sitekey="6Lf6ghgeAAAAAJOPKy5HDXUullV2v5r2pG_H0Wcd" data-callback='onSubmit'
-                            data-action='submit'>Submit</button>
+                            data-action='submit'>Enviar</button>
                         <input type="reset" value="Limpiar" class="btn-limpiar" />
                     </div>
                 </div>
@@ -231,14 +196,14 @@
         </div>
     </div>
 
-    <!-- Boton subir -->
+    <!-- !Boton subir -->
     <div class="up-div">
         <div class="up-button">
             <i class="fas fa-chevron-up"></i>
         </div>
     </div>
 
-    <!-- FOOTER -->
+    <!-- !FOOTER -->
     <div class="footer-basic">
         <div class="logo-footer">
             <img class="logo-white" src="/img/logoWhite.png" alt="logo-white">
@@ -252,24 +217,29 @@
                 <a href="https://www.github.com/Mushroom0047" target="_blank"><i class="fab fa-github"></i></a>
             </div>
             <p class="copyright">
-                &#169;Copyright 2021 HectorValdesM. All rights reserved. 🍄
+                &#169;Copyright 2022 HectorValdesM. All rights reserved. 🍄
             </p>
         </footer>
     </div>
 </body>
-<script src="js/app.js"></script>
+
+<!-- !Necesary -->
 <script src="https://kit.fontawesome.com/be94f8a50b.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
+<script src="js/app.js"></script>
+<script>AOS.init();</script>
 <script src="js/matrix.js"></script>
-<script type="text/javascript" src="/js/vanilla-tilt.js"></script>
 
+<!-- !Google recaptcha -->
 <script>
-    function onSubmit(token) {
-        document.getElementById("contact-form").submit();
-    }
+    // function onSubmit(token) {
+    //     document.getElementById("contact-form").submit();
+    // }
 </script>
+
+<!-- !Anim -->
+<script src="js/typewriterAnim.js"></script>
+<script src="js/littleApss/loaderPage.js"></script>
+<script src="js/littleApss/envelope.js"></script>
 
 </html>
