Changes in type og information

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             <div class="descip-div" data-aos="fade-right" data-aos-duration="1000">
                 <h2 class="h1-sobremi">Sobre mí</h2>
                 <p class="descrip-me">
-                    Hola! Me llamo <strong>Héctor</strong> y soy
+                    ¡Hola! Me llamo <strong>Héctor</strong> y soy
                     Analista programador egresado de Inacap. Soy una persona organizada, dedicada
                     y responsable, con muchas metas cumplidas y muchas más por cumplir.
                     <br />
                     Me considero una persona amigable, comprensiva, creativa, y
-                    creo que para todo hay tiempo. Mi Hobbie son los videojuegos independientes, también me encanta
+                    creo que para todo hay tiempo. Mi Hobby son los videojuegos independientes, también me encanta
                     dibujar y tocar
                     guitarra eléctrica.
                 </p>
@@ -98,7 +98,7 @@
                     Constantemente estoy estudiando de manera autodidacta en la plataforma
                     <strong>Udemy</strong>, actualmente me encuentro realizando un curso de <strong>React</strong> y he
                     realizado diversos cursos de diseño de videojuegos y desarrollo Frontend con <strong>HTML, CSS y
-                        JavaScript.</strong> Conozco sobre <strong>metodologías agiles</strong> de desarrollo, patrónes
+                        JavaScript.</strong> Conozco sobre <strong>metodologías ágiles</strong> de desarrollo, patrones
                     de <strong>arquitectura de software</strong>, desarrollo de aplicaciones de escritorio y móviles.
                     Hasta ahora las tecnologías que manejo son las siguientes:
                 </p>
@@ -146,11 +146,10 @@
         <div class="container-trabajos">
             <h2>Proyectos</h2>
             <p>
-                Tengo pocos proyectos creados, hasta ahora algunas pruebas para
+                Algunos de los proyectos que he creado hasta ahora son algunas pruebas para
                 practicar con <strong>JavaScript</strong>, juegos para pc
                 y algunas modificaciones/creaciones en páginas de
-                Wordpress para la empresa <a href="http://designseogroup.com/" target="_blank"
-                    rel="noopener noreferrer"><b>DesignSeo.</b></a> <br /><br />
+                Wordpress.
             </p>
             <span><i id="spin1" class="fas fa-cog"></i><i id="spin2" class="fas fa-cog"></i></span>        
             <br><br>
@@ -171,7 +170,7 @@
             <h2>Contáctame</h2>
         <div class="form-padre">
             <div class="div-info">
-                <p>Si quieres saber más sobre mí o sobre mi trabajo enviame un mensaje.</p>
+                <p>Si quieres saber más sobre mí o sobre mi trabajo, envíame un mensaje.</p>
                 <i class="fas fa-envelope sobre-icono"></i>
             </div>
             <form id="contact-form" method="post" action="/contacto.php">
