Fixed error in display js code

--- a/trabajos.html
+++ b/trabajos.html
@@ -242,7 +242,7 @@
         </section>
         <hr>
         <br>
-
+<!-- !PROYECTOS JAVASCRIPT -->
         <section id="sec-01">
           <div class="javascript-section">
             <h2 class="main-tittle">~ Proyectos en JavaScript ~</h2>
@@ -250,7 +250,7 @@
             <div class="show_code">
               <input type="button" value="Mostrar Más" class="btn btn-yellow btn__show__js">
             </div>
-        <div class="flexbox-js show">
+        <div class="flexbox-js hide">
           <!-- !Contador manual -->
           <!-- *app -->
           <div class="js-app counter-box flexbox-container">
